...
                          color: Colors.white,
                        ),
                      ),
                    ),
                    viewModelAdapter.shouldPresentButton
                        ? RaisedButton(
                            key: Key("button"),
                            padding: EdgeInsets.all(0),
                            child: Container(
                              padding: EdgeInsets.all(10.0),
                              decoration: BoxDecoration(
                                gradient: LinearGradient(
                                  colors: <Color>[
...
