...
          child: Text("No results found."),
        );

      case LoadingStatus.completed:
        jumpTopScreen(_controller);
        return GridView.builder(
          key: Key('chars_grid_view'),
          padding: EdgeInsets.all(10),
          gridDelegate: SliverGridDelegateWithFixedCrossAxisCount(
            crossAxisCount: 2,
            childAspectRatio: 1 / 1.6,
            crossAxisSpacing: 10,
            mainAxisSpacing: 10,
...
